# pythonDEA

./: .gitignore  README.md  TODO.md  pyproject.toml
examples/: v3_sbm_malmquist_reproduction.py  v4_green_productivity_reproduction.py
readme_parts/: part1_overview_install_quickstart.md  part2_data_params.md  part3_results_customization.md  part4_applications.md  part6_visualization.md
tests/: test_v2_ddf.py  test_v2_malmquist.py  test_v2_orientation.py  test_v2_reference.py  test_v2_sbm.py  test_v2_variables.py  test_v3_audit_examples.py  test_v3_dataframe.py  test_v3_import_registry.py  test_v3_sbm_estimators.py  test_v4_ddf_models.py
v1/: README.md  dea_calculator.py  runner.py  装好依赖后点这个.bat
v1/readme_parts/: part5_faq.md
v2/: __init__.py  data.py  ddf.py  decomposition.py  malmquist.py  orientation.py  panel.py  problem.py  reference.py  result.py  sbm.py  variables.py
v3/: README.md
v3/pythondea/: __init__.py  _version.py  audit.py  dataframe.py  datasets.py  frontier.py
v3/pythondea/core/: __init__.py  data.py  estimator.py  registry.py  results.py  solver.py
v3/pythondea/models/: __init__.py  ddf.py  sbm.py
